@@ -100,7 +100,15 @@
 	<para>
 	  The TCP client quota set using the <command>tcp-clients</command>
 	  option could be exceeded in some cases. This could lead to
-	  exhaustion of file descriptors. (CVE-2018-5743) [GL #615]
+	  exhaustion of file descriptors. This flaw is disclosed in
+	  CVE-2018-5743. [GL #615]
+	</para>
+      </listitem>
+      <listitem>
+	<para>
+	  A race condition could trigger an assertion failure when
+	  a large number of incoming packets were being rejected.
+	  This flaw is disclosed in CVE-2019-6471. [GL #942]
 	</para>
       </listitem>
     </itemizedlist>
